fix(form): overide default border-radius styles on ios

--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -22,7 +22,7 @@
   background: dodgerblue;
   color: #fff;
   border: none;
-  border-radius: 7px;
+  border-radius: 7px !important;
   font-weight: bold;
   font-size: 18px;
   padding: 0.5rem;
